[tool.poetry]
name = "ldap-conn"
version = "0.1.0"
description = ""
authors = ["Pavel Milanov <milanov71@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ldap3 = "^2.9.1"
pycryptodome = "^3.15.0"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
